--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hericlys.dev</title>
     <link rel="stylesheet" href="static/css/style.css">
     <script src="https://kit.fontawesome.com/6d08cf6339.js" defer crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -260,6 +261,7 @@
     </footer>
 
     <script src="static/js/script.js"></script>
+    <script src="static/js/reveal.js"></script>
 </body>
 
 </html>
