--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hericlys.dev</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="shortcut icon" href="static/imgs/logo.svg" type="image/x-icon">
+
     <script src="https://kit.fontawesome.com/6d08cf6339.js" defer crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
