--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="curriculo">
                     <div class="section-header">
                         <h2>Currículo</h2>
-                        <p>Já que chegou até aqui que tau da uma olhada no meu currículo com as minhas experiências e
+                        <p>Já que chegou até aqui que tal da uma olhada no meu currículo com as minhas experiências e
                             habilidades.</p>
                     </div>
                     <a href="static/docs/curriculo_hericlys.pdf" download="" class="button_container">
