--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <i class="fa-solid fa-xmark"></i>
         </button>
         <div class="menu">
-            <a href="/" class="logo">
+            <a href="#home" class="logo">
                 <img class="menu-logo-img" src="static/imgs/logo.svg" alt="lobo vermelho">
                 <h1 class="logo-title"><span>H</span>ericlys.<span>D</span>ev</h1>
             </a>
             <nav class="menu-nav">
                 <ul class="menu-links-container">
-                    <li class="menu-link"><a href="/">Home</a></li>
+                    <li class="menu-link"><a href="#home">Home</a></li>
                     <li class="menu-link"><a href="#about">Sobre</a></li>
                     <li class="menu-link"><a href="#services">Serviços</a></li>
                     <li class="menu-link"><a href="#curriculo">Currículo</a></li>
@@ -254,7 +254,7 @@
             </li>
         </ul>
         <ul class="footer_menu">
-            <li><a href="/">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#curriculo">Currículo</a></li>
